# rust-ai-gateway

./: .mise.toml  AGENTS.md  Cargo.toml  README.md  RUNBOOK.md
.agents/: rules.md
.agents/commands/: build.md  check.md  fmt.md  test.md
.agents/skills/: add-middleware.md  add-provider.md  add-tests.md  debug-errors.md
config/: default.yaml  example.yaml
crates/gateway-api/: AGENTS.md  Cargo.toml
crates/gateway-api/src/: lib.rs  main.rs
crates/gateway-api/src/handlers/: chat.rs  health.rs  models.rs
crates/gateway-api/src/middleware/: mod.rs
crates/gateway-cli/: AGENTS.md  Cargo.toml
crates/gateway-cli/src/: main.rs
crates/gateway-cli/src/commands/: cache.rs  config.rs  mod.rs  status.rs
crates/gateway-config/: AGENTS.md  Cargo.toml
crates/gateway-config/src/: lib.rs  schema.rs  validation.rs
crates/gateway-config/src/validation/: mod.rs  tests.rs
crates/gateway-core/: AGENTS.md  Cargo.toml
crates/gateway-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/gateway-core/src/error/: mod.rs  tests.rs
crates/gateway-core/src/middleware/: mod.rs  tests.rs
crates/gateway-core/src/providers/: anthropic.rs  custom.rs  google.rs  mod.rs  openai.rs  traits.rs
crates/gateway-core/src/providers/anthropic/: mod.rs  tests.rs
crates/gateway-core/src/providers/openai/: mod.rs  tests.rs
crates/gateway-core/src/router/: mod.rs  tests.rs
crates/gateway-core/src/types/: mod.rs  tests.rs
docs/: ai-session-context.md  implementation-plan.md  initial-idea.md  phase-1-foundation.md  phase-2-core.md  phase-3-middleware.md  phase-4-production.md
