[package]
name = "gateway-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API layer for the Rust AI Gateway"

[[bin]]
name = "gateway-api"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
clap.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true

gateway-core = { path = "../gateway-core" }
gateway-config = { path = "../gateway-config" }
