[package]
name = "gateway-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for the Rust AI Gateway"

[[bin]]
name = "gateway-cli"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

gateway-config = { path = "../gateway-config" }
