[package]
name = "gateway-config"
version = "0.1.0"
edition = "2021"
description = "Configuration schemas and validation for the Rust AI Gateway"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
url.workspace = true
